fix(toggle): removed z-index from toggle component

--- a/packages/Toggle/src/Toggle.scss
+++ b/packages/Toggle/src/Toggle.scss
@@ -30,7 +30,6 @@ $focus: var(--focus, #6096e6bf);
         width: 27px;
         height: 27px;
         background: #fff;
-        z-index: 1;
         border-radius: 50%;
         transition: left .1s ease-out;
     }
